[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cfex"
version = "0.1"
description = "Open source utility for cell image analysis"
license = {text = "Apache Software License"}
authors = [
    {name = "r41d4"}, 
    {email = "b4larts@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["vision", "medical", "detection", "segmentation", "features", "pathology"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1.3",
    "tqdm==4.64.0",
    "arrow==1.2.2",
    "Cython>=0.20",
    "numpy>=1.23.4",
    "scipy==1.8.0",
    "pandas==1.4.2",
    "slideio==1.0.2",
    "scikit-image==0.18.0",
    "scikit-learn==1.1.2",
    "opencv-python==4.5.5.64",
    "tensorflow>=2.8.0",
    "csbdeep==0.6.3",
    "stardist==0.8.2",
    "pyclipper==1.3.0",
    "cellprofiler==4.2.1",
    "pyzmq==18.0.1",
    "boto3==1.22.1",
]

[project.scripts]
cfex = "cfex.cfex:run_extraction"